Updated CardGame.js with start button and timer fix

--- a/CardGame.html
+++ b/CardGame.html
@@ -31,6 +31,8 @@
   <p id="status">👀Find all matching pairs!</p>
 
   <div id="game-board"></div>
+  <button id="start-btn">▶️ Start Game</button>
+
 
   <div class="buttons">
     <button id="restart-button">🔁 Restart</button>
